--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
     required: true
     default: ""
   github-token:
-    description: "GitHub token to use within the action when it is performing writing. Defaults to the ${{ secrets.GITHUB_TOKEN }}."
+    description: "GitHub token to use within the action when it is performing writing. Defaults to the GITHUB_TOKEN."
     required: false
     default: ${{ github.token }}
 
