--- a/package.json
+++ b/package.json
@@ -5,38 +5,40 @@
   "author": "Aksio",
   "main": "dist/index.js",
   "license": "MIT",
+  "engines": {
+    "node": ">= 16"
+  },
   "scripts": {
-    "build": "ncc build ./Source/index.ts",
-    "start": "ts-node ./Source/index.ts",
+    "build": "ncc build -o dist/establishVersion ./Source/establishVersion.ts && ncc build -o dist/release ./Source/release.ts",
     "clean": "tsc -b --clean",
-    "lint": "eslint '**/*.{js,ts,tsx}' --quiet --fix",
-    "lint:ci": "eslint '**/*.{js,ts,tsx}' --quiet",
+    "lint": "eslint 'Source/*.ts' --quiet --fix --cache",
+    "lint:ci": "eslint 'Source/*.ts' --quiet",
     "ci": "yarn clean && yarn lint:ci && yarn build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "up": "ncu -u"
   },
   "devDependencies": {
-    "@types/node": "^16.9.1",
-    "@types/semver": "^7.3.8",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
-    "@vercel/ncc": "^0.31.0",
-    "eslint": "7.29.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.4",
+    "@types/node": "^18.7.18",
+    "@types/semver": "^7.3.12",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "8.23.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-no-null": "1.0.2",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.24.0",
-    "semver": "^7.3.5",
-    "typescript": "^4.4.2"
+    "eslint-plugin-prettier": "4.2.1",
+    "semver": "^7.3.7",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@actions/core": "^1.5.0",
-    "@actions/exec": "^1.1.0",
-    "@actions/github": "^5.0.0",
-    "@octokit/rest": "^18.10.0",
-    "prepend-file": "^2.0.0",
+    "@actions/core": "^1.9.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.0.3",
+    "@octokit/rest": "^19.0.4",
+    "prepend-file": "^2.0.1",
     "tag-cmp": "^1.0.1",
-    "ts-node": "^10.2.1",
-    "winston": "^3.3.3"
+    "ts-node": "^10.9.1",
+    "winston": "^3.8.2"
   }
 }
