--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,5 @@ jobs:
           node-version: 14.x
           registry-url: "https://registry.npmjs.org"
       - run: yarn
-      - run: yarn release
+      - run: yarn build
+      - run: yarn test
