Adding a property to identify if the version is isolated for the pull request

--- a/action.yml
+++ b/action.yml
@@ -21,14 +21,16 @@ inputs:
 
 outputs:
   should-publish:
-    description: "Whether or not a publish should be done"
+    description: "Boolean telling whether or not a publish should be done"
   version:
-    description: " Version number to publish with"
+    description: "Version number to publish with"
   prerelease:
-    description: "Whether or not it is a prerelease"
+    description: "Boolean telling whether or not it is a prerelease"
+  isolated-for-pull-request:
+    description: "Boolean telling whether or not it should be an isolated release for the pull request only"
 
 runs:
   using: "node16"
   main: "dist/HandleVersion/index.js"
-  post: 'dist/HandleRelease/index.js'
-  post-if: 'success()'
+  post: "dist/HandleRelease/index.js"
+  post-if: "success()"
